--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <div id="header">
-  <a href="/"><img src="/images/logo.png" /></a>
+  <a href="/"><img src="/images/logo.jpg" /></a>
 </div>
 <div id="container">
   <div id="video">
-    Video stuff coming soon...
+    Check back during the event for live streaming.
   </div>
 </div>
 </body>
