Add sublime video script.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <link href="/index.css" media="screen" rel="stylesheet" type="text/css"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
   <script src="/modernizr.js"></script>
+  <script type="text/javascript" src="http://cdn.sublimevideo.net/js/ur2rogyy.js"></script>
   <meta name="description" content="DNOW 2012">
   <meta name="tags" content="dnow2012">
 </head>
