--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html class="no-js">
 <head>
   <title>DNOW 2012 LIVE</title>
-  <link href="/index.css" media="screen" rel="stylesheet" type="text/css"/>
+  <link href="/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"/>
+  <link href="/dnow.css" media="screen" rel="stylesheet" type="text/css"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
   <script src="/modernizr.js"></script>
   <script type="text/javascript" src="http://cdn.sublimevideo.net/js/ur2rogyy.js"></script>
@@ -10,13 +11,40 @@
   <meta name="tags" content="dnow2012">
 </head>
 <body>
-<div id="header">
-  <a href="/"><img src="/images/logo.jpg" /></a>
-</div>
-<div id="container">
-  <div id="video">
-    Check back during the event for live streaming.
+  <div class="container">
+    <div class="row">
+      <div class="span12">
+        <div class="row">
+          <div class="logo span4">
+            <a href="/"><img src="/images/logo.png" /></a>
+          </div>
+          <div class="span8">
+          </div>
+        </div>
+        <div class="row">
+          <div class="video span8">
+            <img src="/images/player.png" />
+          </div>
+          <div class="schedule span4">
+            <img src="/images/schedule.png" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="span3">
+            <img src="/images/replay1.png" />
+          </div>
+          <div class="span3">
+            <img src="/images/replay2.png" />
+          </div>
+          <div class="span3">
+            <img src="/images/replay3.png" />
+          </div>
+          <div class="span3">
+            <img src="/images/replay4.png" />
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
 </body>
 </html>
