more video styling.

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,9 @@
           </div>
         </div>
         <div class="row">
-          <div id="mediaplayer" class="video span8">
-            <img src="/images/player.png" />
+          <div class="video span8">
+            <div id="mediaplayer">
+            </div>
           </div>
           <div class="schedule span4">
             <img src="/images/schedule.png" />
