skinning the player.

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
   <script type="text/javascript">
     jwplayer('mediaplayer').setup({
       'id': 'playerID',
+      'skin': '/minima.zip',
       'autostart': 'true',
       'width': '640',
       'height': '360',
