--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
   <script src="/modernizr.js"></script>
   <script type="text/javascript" src="/scripts/jwplayer.js"></script>
+  <script type="text/javascript" src="/scripts/jquery.countdown.js"></script>
   <meta name="description" content="DNOW 2012">
   <meta name="tags" content="dnow2012">
 </head>
@@ -18,6 +19,14 @@
           <a href="/"><img src="/images/logo.png" /></a>
         </div>
         <div class="span8">
+          <div id="clock">
+            <div class="clock-content">
+              <span id="daysLeft"></span><img src="/images/days.png" />
+              <span id="hours"></span><img src="/images/hours.png" />
+              <span id="minutes"></span><img src="/images/mins.png" />
+              <span id="seconds"></span><img src="/images/seconds.png" />
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -70,6 +79,40 @@
             }
           }
       ]
+    });
+  </script>
+  <script type="text/javascript">
+    $(function() {
+      $('div#clock').countdown("2012/03/16 19:00:00", function(event) {
+        $this = $(this);
+
+        // Calculate the time left
+        var timeLeft = [
+          event.lasting.days,
+          event.lasting.hours,
+          event.lasting.minutes,
+          event.lasting.seconds
+        ];
+
+        switch(event.type) {
+          case "seconds":
+            $this.find('span#'+event.type).html(timeLeft[3]);
+            break;
+          case "minutes":
+            $this.find('span#'+event.type).html(timeLeft[2]);
+            break;
+          case "hours":
+            $this.find('span#'+event.type).html(timeLeft[1]);
+            break;
+          case "days":
+          case "daysLeft":
+            $this.find('span#'+event.type).html(timeLeft[0]);
+            break;
+          case "finished":
+            $this.fadeTo('slow', .5);
+            break;
+        }
+      });
     });
   </script>
 </body>
