--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,13 @@
   <div class="container">
     <section class="header-content">
       <div class="row">
-        <div class="logo span4">
+        <div class="logo span3">
           <a href="/"><img src="/images/logo.png" /></a>
         </div>
-        <div class="span8">
+        <div class="span9">
           <div id="clock">
             <div class="clock-content">
+              <img class="live" src="/images/liveindicator.png" />
               <span id="daysLeft"></span><img src="/images/days.png" />
               <span id="hours"></span><img src="/images/hours.png" />
               <span id="minutes"></span><img src="/images/mins.png" />
