Add credits at the bottom.

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,13 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="row">
+        <div class="span8 offset3">
+      Streaming and Development by <a href="http://idlefusion.com">Idle Fusion</a> with Graphics by <a href="http://jeremybags.com">JeremyBags</a>.
+        </div>
+      </div>
+    </footer>
   </div>
   <script type="text/javascript">
     jwplayer('mediaplayer').setup({
