update alt tags on images for compliance.

--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,16 @@
     <section class="header-content">
       <div class="row">
         <div class="logo span3">
-          <a href="/"><img src="/images/logo.png" /></a>
+          <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
         </div>
         <div class="span9">
           <div id="clock">
             <div class="clock-content">
-              <img class="live" src="/images/liveindicator.png" />
-              <span id="daysLeft"></span><img src="/images/days.png" />
-              <span id="hours"></span><img src="/images/hours.png" />
-              <span id="minutes"></span><img src="/images/mins.png" />
-              <span id="seconds"></span><img src="/images/seconds.png" />
+              <img alt="Live in..." class="live" src="/images/liveindicator.png" />
+              <span id="daysLeft"></span><img alt="Days left" src="/images/days.png" />
+              <span id="hours"></span><img alt="Hours left" src="/images/hours.png" />
+              <span id="minutes"></span><img alt="Minutes left" src="/images/mins.png" />
+              <span id="seconds"></span><img alt="Seconds left" src="/images/seconds.png" />
             </div>
           </div>
         </div>
@@ -38,23 +38,23 @@
           </div>
         </div>
         <div class="schedule span3">
-          <img src="/images/schedule.png" />
+          <img alt="Schedule for DNOW 2012" src="/images/schedule.png" />
         </div>
       </div>
     </section>
     <section class="replay-content">
       <div class="row">
         <div class="span3">
-          <img src="/images/replay1coming.png" />
+          <img alt="Watch Replay of Session One" src="/images/replay1coming.png" />
         </div>
         <div class="span3">
-          <img src="/images/replay2coming.png" />
+          <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
         </div>
         <div class="span3">
-          <img src="/images/replay3coming.png" />
+          <img alt="Watch Replay of Session Three" src="/images/replay3coming.png" />
         </div>
         <div class="span3">
-          <img src="/images/replay4coming.png" />
+          <img alt="Watch Replay of Session Four" src="/images/replay4coming.png" />
         </div>
       </div>
     </section>
