change meta tags to keywords.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="/scripts/jwplayer.js"></script>
   <script type="text/javascript" src="/scripts/jquery.countdown.js"></script>
   <meta name="description" content="DNOW 2012">
-  <meta name="tags" content="dnow2012">
+  <meta name="keywords" content="dnow, 2012, DNOW2012">
 </head>
 <body>
   <div class="container">
