update IP address for stream.

--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -69,7 +69,7 @@
     jwplayer('mediaplayer').setup({
       'id': 'playerID',
       'skin': '/minima.zip',
-      'autostart': 'false',
+      'autostart': 'true',
       'width': '640',
       'height': '360',
       'provider': 'rtmp',
