update main site.

--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,11 @@
     jwplayer('mediaplayer').setup({
       'id': 'playerID',
       'skin': '/minima.zip',
-      'autostart': 'false',
+      'autostart': 'true',
       'width': '640',
       'height': '360',
       'provider': 'rtmp',
-      'streamer': 'rtmp://107.20.142.70/live',
+      'streamer': 'rtmp://23.21.147.209/live',
       'file': 'livestream',
       'controlbar': 'bottom',
       'modes': [
@@ -82,7 +82,7 @@
           {
             type: 'html5',
             config: {
-             'file': 'http://107.20.142.70:1935/live/livestream/playlist.m3u8',
+             'file': 'http://23.21.147.209:1935/live/livestream/playlist.m3u8',
              'provider': 'video'
             }
           }
