--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -34,7 +34,9 @@
     <section class="video-content">
       <div class="row">
         <div class="span8">
-          <img alt="Live soon!" src="/images/preshow.jpg" />
+          <div id="mediaplayer">
+            <img alt="Live soon!" src="/images/preshow.jpg" />
+          </div>
         </div>
         <div class="schedule span3">
           <img alt="Schedule for DNOW 2012" src="/images/schedule.png" />
@@ -43,8 +45,8 @@
     </section>
     <section class="replay-content">
       <div class="row">
-        <div class="span3">
-          <img alt="Watch Replay of Session One" src="/images/replay1coming.png" />
+        <div id="watch1" class="span3">
+          <img alt="Watch Replay of Session One" src="/images/replay1.png" />
         </div>
         <div class="span3">
           <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
@@ -66,27 +68,6 @@
     </footer>
   </div>
   <script type="text/javascript">
-    jwplayer('mediaplayer').setup({
-      'id': 'playerID',
-      'skin': '/minima.zip',
-      'autostart': 'true',
-      'width': '640',
-      'height': '360',
-      'provider': 'rtmp',
-      'streamer': 'rtmp://23.21.147.209/live',
-      'file': 'livestream',
-      'controlbar': 'bottom',
-      'modes': [
-          {type: 'flash', src: '/jwplayer/player.swf'},
-          {
-            type: 'html5',
-            config: {
-             'file': 'http://23.21.147.209:1935/live/livestream/playlist.m3u8',
-             'provider': 'video'
-            }
-          }
-      ]
-    });
   </script>
   <script type="text/javascript">
     $(function() {
@@ -119,6 +100,33 @@
             $this.fadeTo('slow', .5);
             break;
         }
+      });
+    });
+  </script>
+  <script type="text/javascript">
+    $(function() {
+      $('div#watch1').click(function(e) {
+        jwplayer('mediaplayer').setup({
+          'id': 'playerID',
+          'skin': '/minima.zip',
+          'autostart': 'true',
+          'width': '640',
+          'height': '360',
+          'provider': 'rtmp',
+          'streamer': 'rtmp://23.21.147.209/live',
+          'file': 'livestream',
+          'controlbar': 'bottom',
+          'modes': [
+              {type: 'flash', src: '/jwplayer/player.swf'},
+              {
+                type: 'html5',
+                config: {
+                 'file': 'http://23.21.147.209:1935/live/livestream/playlist.m3u8',
+                 'provider': 'video'
+                }
+              }
+          ]
+        });
       });
     });
   </script>
