--- a/public/one.html
+++ b/public/one.html
@@ -33,9 +33,8 @@
     </section>
     <section class="video-content">
       <div class="row">
-        <div class="span8">
+        <div class="video span8">
           <div id="mediaplayer">
-            <img alt="Live soon!" src="/images/preshow.jpg" />
           </div>
         </div>
         <div class="schedule span3">
@@ -45,7 +44,7 @@
     </section>
     <section class="replay-content">
       <div class="row">
-        <div id="watch1" class="span3">
+        <div class="span3">
           <img alt="Watch Replay of Session One" src="/images/replay1.png" />
         </div>
         <div class="span3">
@@ -68,6 +67,24 @@
     </footer>
   </div>
   <script type="text/javascript">
+    jwplayer('mediaplayer').setup({
+      'id': 'playerID',
+      'autostart': 'true',
+      'width': '640',
+      'height': '360',
+      'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW_Session_1+-1.mov',
+      'controlbar': 'bottom',
+      'modes': [
+          {type: 'flash', src: '/jwplayer/player.swf'},
+          {
+            type: 'html5',
+            config: {
+             'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW_Session_1+-1.mov',
+             'provider': 'video'
+            }
+          }
+      ]
+    });
   </script>
   <script type="text/javascript">
     $(function() {
@@ -97,33 +114,9 @@
             $this.find('span#'+event.type).html(timeLeft[0]);
             break;
           case "finished":
-            $this.fadeTo('slow', .5);
+            $this.fadeTo('slow', 0);
             break;
         }
-      });
-    });
-  </script>
-  <script type="text/javascript">
-    $(function() {
-      $('div#watch1').click(function(e) {
-        jwplayer('mediaplayer').setup({
-          'id': 'playerID',
-          'autostart': 'true',
-          'width': '640',
-          'height': '360',
-          'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW_Session_1+-1.mov',
-          'controlbar': 'bottom',
-          'modes': [
-              {type: 'flash', src: '/jwplayer/player.swf'},
-              {
-                type: 'html5',
-                config: {
-                 'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW_Session_1+-1.mov',
-                 'provider': 'video'
-                }
-              }
-          ]
-        });
       });
     });
   </script>
