Add hand cursor on images to indicate they are clickable.

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <section class="replay-content">
       <div class="row">
         <div class="span3">
-          <img alt="Watch Replay of Session One" src="/images/replay1.png" />
+          <a href="#"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
           <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
