--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -46,7 +46,7 @@
     <section class="replay-content">
       <div class="row">
         <div id="watch1" class="span3">
-          <img alt="Watch Replay of Session One" src="/images/replay1.png" />
+          <a href="#"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
           <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
