new m4v file for streaming session one.

--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -111,14 +111,14 @@
           'autostart': 'true',
           'width': '640',
           'height': '480',
-          'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW_Session_1+-1.mov',
+          'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session1.m4v',
           'controlbar': 'bottom',
           'modes': [
               {type: 'flash', src: '/jwplayer/player.swf'},
               {
                 type: 'html5',
                 config: {
-                 'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW_Session_1+-1.mov',
+                 'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session1.m4v',
                  'provider': 'video'
                 }
               }
