--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -45,8 +45,8 @@
     </section>
     <section class="replay-content">
       <div class="row">
-        <div id="watch1" class="span3">
-          <a href="#"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
+        <div class="span3">
+          <a href="/sessions/one"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
           <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
@@ -68,10 +68,8 @@
     </footer>
   </div>
   <script type="text/javascript">
-  </script>
-  <script type="text/javascript">
     $(function() {
-      $('div#clock').countdown("2012/03/17 10:30:00", function(event) {
+      $('div#clock').countdown("2012/03/17 18:30:00", function(event) {
         $this = $(this);
 
         // Calculate the time left
@@ -100,30 +98,6 @@
             $this.fadeTo('slow', .5);
             break;
         }
-      });
-    });
-  </script>
-  <script type="text/javascript">
-    $(function() {
-      $('div#watch1').click(function(e) {
-        jwplayer('mediaplayer').setup({
-          'id': 'playerID',
-          'autostart': 'true',
-          'width': '640',
-          'height': '480',
-          'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session1.m4v',
-          'controlbar': 'bottom',
-          'modes': [
-              {type: 'flash', src: '/jwplayer/player.swf'},
-              {
-                type: 'html5',
-                config: {
-                 'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session1.m4v',
-                 'provider': 'video'
-                }
-              }
-          ]
-        });
       });
     });
   </script>
