--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
           <a href="/sessions/one"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
+          <a href="/sessions/two"><img class="replay" alt="Watch Replay of Session Two" src="/images/replay2.png" /></a>
         </div>
         <div class="span3">
           <img alt="Watch Replay of Session Three" src="/images/replay3coming.png" />
@@ -90,7 +90,7 @@
   </script>
   <script type="text/javascript">
     $(function() {
-      $('div#clock').countdown("2012/03/17 10:30:00", function(event) {
+      $('div#clock').countdown("2012/03/17 18:15:00", function(event) {
         $this = $(this);
 
         // Calculate the time left
