--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -49,7 +49,7 @@
           <a href="/sessions/one"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
-          <a href="/sessions/two"><img class="replay" alt="Watch Replay of Session Two" src="/images/replay2.png" /></a>
+          <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
         </div>
         <div class="span3">
           <img alt="Watch Replay of Session Three" src="/images/replay3coming.png" />
