--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           <img alt="Schedule for DNOW 2012" src="/images/schedule.png" />
           <a href="https://twitter.com/intent/tweet?button_hashtag=unshaken2012&text=Watch%20DNOW2012%20http%3A%2F%2Fdnow2012.org" class="twitter-hashtag-button" data-size="large" data-related="unshaken2012">Tweet #unshaken2012</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          <a name="fb_share" type="button" share_url="http://dnow2012.org">UNSHAKEN 20120</a>
+          <a name="fb_share" type="button" share_url="http://dnow2012.org">DNOW LIVE -- UNSHAKEN 2012</a>
 <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
         type="text/javascript">
 </script>
