--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -18,34 +18,27 @@
         <div class="logo span3">
           <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
         </div>
-        <div class="span9">
-          <div id="clock">
-            <div class="clock-content">
-              <img alt="Live in..." class="live" src="/images/liveindicator.png" />
-              <span id="daysLeft"></span><img alt="Days left" src="/images/days.png" />
-              <span id="hours"></span><img alt="Hours left" src="/images/hours.png" />
-              <span id="minutes"></span><img alt="Minutes left" src="/images/mins.png" />
-              <span id="seconds"></span><img alt="Seconds left" src="/images/seconds.png" />
+        <div class="span3 offset1">
+            <div class="twitter">
+            <a href="https://twitter.com/intent/tweet?button_hashtag=unshaken2012&text=Watch%20DNOW2012%20http%3A%2F%2Fdnow2012.org" class="twitter-hashtag-button" data-size="large" data-related="unshaken2012">Tweet #unshaken2012</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
-          </div>
+        </div>
+        <div class="span3">
+            <div class="facebook">
+            <a name="fb_share" type="button" share_url="http://dnow2012.org">DNOW LIVE -- UNSHAKEN 2012</a>
+  <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
+          type="text/javascript">
+  </script>
+            </div>
         </div>
       </div>
     </section>
     <section class="video-content">
       <div class="row">
-        <div class="span8">
-          <div id="mediaplayer">
-            <img alt="Live soon!" src="/images/preshow.jpg" />
-          </div>
-        </div>
-        <div class="schedule span3">
-          <img alt="Schedule for DNOW 2012" src="/images/schedule.png" />
-          <a href="https://twitter.com/intent/tweet?button_hashtag=unshaken2012&text=Watch%20DNOW2012%20http%3A%2F%2Fdnow2012.org" class="twitter-hashtag-button" data-size="large" data-related="unshaken2012">Tweet #unshaken2012</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          <a name="fb_share" type="button" share_url="http://dnow2012.org">DNOW LIVE -- UNSHAKEN 2012</a>
-<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
-        type="text/javascript">
-</script>
+        <div class="span12">
+          <h1>Thanks for tuning in this weekend to DNOW 2012.</h1>
+          <h1>Check back on Sunday for replays of each session.</h1>
         </div>
       </div>
     </section>
