set replays live.

--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -48,13 +48,13 @@
           <a href="/sessions/one"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
+          <a href="/sessions/two"><img class="replay" alt="Watch Replay of Session Two" src="/images/replay2.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Three" src="/images/replay3coming.png" />
+          <a href="/sessions/three"><img class="replay" alt="Watch Replay of Session Three" src="/images/replay3.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Four" src="/images/replay4coming.png" />
+          <a href="/sessions/frou"><img class="replay" alt="Watch Replay of Session Four" src="/images/replay4.png" /></a>
         </div>
       </div>
     </section>
