--- a/public/three.html
+++ b/public/three.html
@@ -69,14 +69,14 @@
       'autostart': 'true',
       'width': '640',
       'height': '480',
-      'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session1.m4v',
+      'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/talentshow.mov',
       'controlbar': 'bottom',
       'modes': [
           {type: 'flash', src: '/jwplayer/player.swf'},
           {
             type: 'html5',
             config: {
-             'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session1.m4v',
+             'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/talentshow.mov',
              'provider': 'video'
             }
           }
