--- a/public/two.html
+++ b/public/two.html
@@ -19,15 +19,6 @@
           <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
         </div>
         <div class="span9">
-          <div id="clock">
-            <div class="clock-content">
-              <img alt="Live in..." class="live" src="/images/liveindicator.png" />
-              <span id="daysLeft"></span><img alt="Days left" src="/images/days.png" />
-              <span id="hours"></span><img alt="Hours left" src="/images/hours.png" />
-              <span id="minutes"></span><img alt="Minutes left" src="/images/mins.png" />
-              <span id="seconds"></span><img alt="Seconds left" src="/images/seconds.png" />
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -54,13 +45,13 @@
           <a href="/sessions/one"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
+          <a href="/sessions/two"><img class="replay" alt="Watch Replay of Session Two" src="/images/replay2.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Three" src="/images/replay3coming.png" />
+          <a href="/sessions/three"><img class="replay" alt="Watch Replay of Session Three" src="/images/replay3.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Four" src="/images/replay4coming.png" />
+          <a href="/sessions/frou"><img class="replay" alt="Watch Replay of Session Four" src="/images/replay4.png" /></a>
         </div>
       </div>
     </section>
@@ -78,52 +69,18 @@
       'autostart': 'true',
       'width': '640',
       'height': '480',
-      'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW-Session-2.mp4',
+      'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session2.mov',
       'controlbar': 'bottom',
       'modes': [
           {type: 'flash', src: '/jwplayer/player.swf'},
           {
             type: 'html5',
             config: {
-             'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/DNOW-Session-2.mp4',
+             'file': 'https://s3.amazonaws.com/streaming.chestnutmountain.com/session2.mov',
              'provider': 'video'
             }
           }
       ]
-    });
-  </script>
-  <script type="text/javascript">
-    $(function() {
-      $('div#clock').countdown("2012/03/17 20:10:00", function(event) {
-        $this = $(this);
-
-        // Calculate the time left
-        var timeLeft = [
-          event.lasting.days,
-          event.lasting.hours,
-          event.lasting.minutes,
-          event.lasting.seconds
-        ];
-
-        switch(event.type) {
-          case "seconds":
-            $this.find('span#'+event.type).html(timeLeft[3]);
-            break;
-          case "minutes":
-            $this.find('span#'+event.type).html(timeLeft[2]);
-            break;
-          case "hours":
-            $this.find('span#'+event.type).html(timeLeft[1]);
-            break;
-          case "days":
-          case "daysLeft":
-            $this.find('span#'+event.type).html(timeLeft[0]);
-            break;
-          case "finished":
-            $this.fadeTo('slow', 0);
-            break;
-        }
-      });
     });
   </script>
   <script type="text/javascript">
