--- a/public/index.html
+++ b/public/index.html
@@ -18,33 +18,27 @@
         <div class="logo span3">
           <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
         </div>
-        <div class="span9">
-          <div id="clock">
-            <div class="clock-content">
-              <img alt="Live in..." class="live" src="/images/liveindicator.png" />
-              <span id="daysLeft"></span><img alt="Days left" src="/images/days.png" />
-              <span id="hours"></span><img alt="Hours left" src="/images/hours.png" />
-              <span id="minutes"></span><img alt="Minutes left" src="/images/mins.png" />
-              <span id="seconds"></span><img alt="Seconds left" src="/images/seconds.png" />
+        <div class="span3 offset1">
+            <div class="twitter">
+            <a href="https://twitter.com/intent/tweet?button_hashtag=unshaken2012&text=Watch%20DNOW2012%20http%3A%2F%2Fdnow2012.org" class="twitter-hashtag-button" data-size="large" data-related="unshaken2012">Tweet #unshaken2012</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
-          </div>
+        </div>
+        <div class="span3">
+            <div class="facebook">
+            <a name="fb_share" type="button" share_url="http://dnow2012.org">DNOW LIVE -- UNSHAKEN 2012</a>
+  <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
+          type="text/javascript">
+  </script>
+            </div>
         </div>
       </div>
     </section>
     <section class="video-content">
       <div class="row">
-        <div class="video span8">
-          <div id="mediaplayer">
-          </div>
-        </div>
-        <div class="schedule span3">
-          <img alt="Schedule for DNOW 2012" src="/images/schedule.png" />
-          <a href="https://twitter.com/intent/tweet?button_hashtag=unshaken2012&text=Watch%20DNOW2012%20http%3A%2F%2Fdnow2012.org" class="twitter-hashtag-button" data-size="large" data-related="unshaken2012">Tweet #unshaken2012</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          <a name="fb_share" type="button" share_url="http://dnow2012.org">DNOW LIVE -- UNSHAKEN 2012</a>
-<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
-        type="text/javascript">
-</script>
+        <div class="span12">
+          <h1>Thanks for tuning in this weekend to DNOW 2012.</h1>
+          <h1>Check back on Sunday for replays of each session.</h1>
         </div>
       </div>
     </section>
@@ -54,13 +48,13 @@
           <a href="/sessions/one"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
+          <a href="/sessions/two"><img class="replay" alt="Watch Replay of Session Two" src="/images/replay2.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Three" src="/images/replay3coming.png" />
+          <a href="/sessions/three"><img class="replay" alt="Watch Replay of Session Three" src="/images/replay3.png" /></a>
         </div>
         <div class="span3">
-          <img alt="Watch Replay of Session Four" src="/images/replay4coming.png" />
+          <a href="/sessions/frou"><img class="replay" alt="Watch Replay of Session Four" src="/images/replay4.png" /></a>
         </div>
       </div>
     </section>
@@ -72,28 +66,6 @@
       </div>
     </footer>
   </div>
-  <script type="text/javascript">
-    jwplayer('mediaplayer').setup({
-      'id': 'playerID',
-      'autostart': 'true',
-      'width': '640',
-      'height': '480',
-      'provider': 'rtmp',
-      'streamer': 'rtmp://23.21.147.209/live',
-      'file': 'livestream',
-      'controlbar': 'bottom',
-      'modes': [
-          {type: 'flash', src: '/jwplayer/player.swf'},
-          {
-            type: 'html5',
-            config: {
-             'file': 'http://23.21.147.209:1935/live/livestream/playlist.m3u8',
-             'provider': 'video'
-            }
-          }
-      ]
-    });
-  </script>
   <script type="text/javascript">
     $(function() {
       $('div#clock').countdown("2012/03/17 20:10:00", function(event) {
@@ -122,7 +94,7 @@
             $this.find('span#'+event.type).html(timeLeft[0]);
             break;
           case "finished":
-            $this.fadeTo('slow', 0);
+            $this.fadeTo('slow', .5);
             break;
         }
       });
