update replay links.

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="span12">
           <h1>Thanks for tuning in this weekend to DNOW 2012.</h1>
-          <h1>Check back on Sunday for replays of each session.</h1>
+          <h1>Click below to watch a session replay.</h1>
         </div>
       </div>
     </section>
