Fix link to video four.

--- a/public/one.html
+++ b/public/one.html
@@ -51,7 +51,7 @@
           <a href="/sessions/three"><img class="replay" alt="Watch Replay of Session Three" src="/images/replay3.png" /></a>
         </div>
         <div class="span3">
-          <a href="/sessions/frou"><img class="replay" alt="Watch Replay of Session Four" src="/images/replay4.png" /></a>
+          <a href="/sessions/four"><img class="replay" alt="Watch Replay of Session Four" src="/images/replay4.png" /></a>
         </div>
       </div>
     </section>
