set vimeo video to homepage.

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,7 @@
     <section class="video-content">
       <div class="row">
         <div class="span12">
-          <h1>Thanks for tuning in this weekend to DNOW 2012.</h1>
-          <h1>Click below to watch a session replay.</h1>
+          <iframe src="http://player.vimeo.com/video/38717798" width="930" height="360" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         </div>
       </div>
     </section>
