--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -1,124 +1,240 @@
 <!DOCTYPE html>
-<html class="no-js">
-<head>
-  <title>DNOW 2012 LIVE</title>
-  <link href="/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"/>
-  <link href="/dnow.css" media="screen" rel="stylesheet" type="text/css"/>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
-  <script src="/modernizr.js"></script>
-  <script type="text/javascript" src="/scripts/jwplayer.js"></script>
-  <script type="text/javascript" src="/scripts/jquery.countdown.js"></script>
-  <meta name="description" content="DNOW 2012">
-  <meta name="keywords" content="dnow, 2012, DNOW2012">
-</head>
-<body>
-  <div class="container">
-    <section class="header-content">
-      <div class="row">
-        <div class="logo span3">
-          <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
-        </div>
-        <div class="span9">
-          <div id="clock">
-            <div class="clock-content">
-              <img alt="Live in..." class="live" src="/images/liveindicator.png" />
-              <span id="daysLeft"></span><img alt="Days left" src="/images/days.png" />
-              <span id="hours"></span><img alt="Hours left" src="/images/hours.png" />
-              <span id="minutes"></span><img alt="Minutes left" src="/images/mins.png" />
-              <span id="seconds"></span><img alt="Seconds left" src="/images/seconds.png" />
-            </div>
-          </div>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Dnow2013 | A Gathering of Middle & High School Students</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.3">
+    <meta name="description" content="Dnow2013 | The Name">
+    <meta name="author" content="Dnow2013 | The Name">
+
+    <!-- Le styles -->
+    <link href="/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        /*padding-top: 20px;
+        padding-bottom: 40px;*/
+      }
+
+      /* Custom container */
+      .container-narrow {
+        margin: -2215px auto;
+        /*max-width: 800px;*/
+      }
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
+
+      /* Main marketing message and sign up button */
+      .jumbotron {
+        width: 800px;
+        margin: auto auto;
+        text-align: center;
+      }
+      .jumbotron h1 {
+        font-size: 72px;
+        line-height: 1;
+      }
+      .jumbotron .btn {
+        font-size: 21px;
+        padding: 14px 24px;
+      }
+
+      /* Supporting marketing content */
+      .marketing {
+        margin: 60px 0;
+      }
+      .marketing p + h4 {
+        margin-top: 28px;
+      }
+    </style>
+    <link href="/dnow.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="/images/favicon.png">
+  </head>
+
+  <body>
+
+      <!-- nav -->
+
+<ul id="menu-bar">
+ <li class="current"><!-- <a href="#">Home</a> --><!-- /li> -->
+         <li><a href="#video1">Dance Video</a></li>
+         <li><a href="#dates1">Dates</a></li>
+         <li><a href="#price1">Price</a></li>
+         <li><a href="#artist">Artist</a></li>
+         <li><a href="#speaker">Speaker</a></li>
+         
+  </li>
+</ul>
+
+<!-- end nav -->
+
+<!-- Navigation -->
+<!--     <div id="nav">
+     <ul>
+         <li><a href="#dates1">Dates</a></li>
+         <li><a href="#price1">Price</a></li>
+         <li><a href="#artist">Artist</a></li>
+         <li><a href="#speaker">Speaker</a></li>
+     </ul>
+    </div> -->
+<!-- End Navigation -->
+
+    <div id="overlay"><img src="/images/texture.png"></div>
+    <div class="container-narrow">
+
+
+      <!-- <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <h3 class="muted">Project name</h3>
+      </div> -->
+      <div id="logo"> <a href="http://dnow13.com"><img src="/images/logo.png" alt="Dnow2013 "The Name""></a></div>
+        <div class="socialbox"> <div id="social"> <a href="http://twitter.com/dnow13" target="_blank"><image src="/images/twitter.png" alt="Dnow2013 "The Name""></a></div>
+        <div id="social"> <image src="/images/facebook.png" alt="Dnow2013 "The Name""></div></div>
+      <!-- <hr> -->
+
+<!-- video title -->
+      <div id="page5">
+      <a id="video1"></a>
+      <div id="video-player">
+        <div class="jumbotron">
+          <img src="/images/the-dance.png" alt="Learn the dance video">
         </div>
       </div>
-    </section>
-    <section class="video-content">
-      <div class="row">
-        <div class="span8">
-          <div id="mediaplayer">
-            <img alt="Live soon!" src="/images/preshow.jpg" />
-          </div>
+    </div>
+<!-- end of Video Title -->
+
+<!-- video -->
+      <div id="page5">
+      <a id="video1"></a>
+      <div id="video-player">
+        <div class="jumbotron">
+          <div id="video"><iframe src="http://player.vimeo.com/video/60765157" width="640" height="360" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
         </div>
-        <div class="schedule span3">
-          <img alt="Schedule for DNOW 2012" src="/images/schedule.png" />
-          <a href="https://twitter.com/intent/tweet?button_hashtag=unshaken2012&text=Watch%20DNOW2012%20http%3A%2F%2Fdnow2012.org" class="twitter-hashtag-button" data-size="large" data-related="unshaken2012">Tweet #unshaken2012</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          <a name="fb_share" type="button" share_url="http://dnow2012.org">DNOW LIVE -- UNSHAKEN 2012</a>
-<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
-        type="text/javascript">
+      </div>
+    </div>
+<!-- end of Video -->
+
+<!-- Dates -->
+<div id="page1">
+  <a id="dates1"></a>
+<div id="jumbotron-background">
+      <div class="jumbotron">
+        <div id="dates"><img src="/images/dates.png" alt="March 15th-17th, 2013"></div>
+        <!-- <h1>Super awesome marketing speak!</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <a class="btn btn-large btn-success" href="#">Sign up today</a> -->
+      </div>
+</div>
+</div>
+<!-- End of Dates -->
+      <!-- <hr> -->
+<!-- Price -->
+      <div id="page2">
+       <a id="price1"></a>
+      <div id="price-background">
+        <div class="jumbotron">
+          <div id="price"><img src="/images/pricing.png" alt="March 15th-17th, 2013"></div>
+        </div>
+      </div>
+    </div>
+    <!-- End of price -->
+<!-- Artist -->
+      <div id="page3">
+      <a id="artist"></a>
+      <div id="music-background">
+        <div class="jumbotron">
+          <div id="music-logo"><a href="http://www.unhinderedworship.com/" target="_blank"><img src="/images/unhindered-logo.png" alt="Unhindered"></a></div>
+          <div id="special-guest"><a href="http://reachrecords.com/artists/show/KB" target="_blank"><img src="/images/kb-logo.png" alt="Special Guest KB"></a></div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Artist -->
+
+<!-- Speaker -->
+      <div id="page4">
+      <a id="speaker"></a>
+      <div id="featuring-background">
+        <div class="jumbotron">
+          <div id="speaker-logo"><a href="https://twitter.com/clayscroggins" target="_blank"><img src="/images/clay-logo.png" alt="Clay Scroggins"></a></div>
+        </div>
+      </div>
+    </div>
+    <!-- end of Speaker -->
+</div> <!-- end overlay -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/scripts/jquery.js"></script>
+    <script src="/scripts/bootstrap.min.js"></script>
+
+    <!-- Smooth Scrolling jquery -->
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+                $(".contactLink").click(function(){
+                    if ($("#contactForm").is(":hidden")){
+                        $("#contactForm").slideDown("slow");
+                    }
+                    else{
+                        $("#contactForm").slideUp("slow");
+                    }
+                });
+            });
+            function closeForm(){
+                $("#messageSent").show("slow");
+                setTimeout('$("#messageSent").hide();$("#contactForm").slideUp("slow")', 2000);
+           }
+
+$(document).ready(function() {
+  function filterPath(string) {
+    return string
+      .replace(/^\//,'')
+      .replace(/(index|default).[a-zA-Z]{3,4}$/,'')
+      .replace(/\/$/,'');
+  }
+  $('a[href*=#]').each(function() {
+    if ( filterPath(location.pathname) == filterPath(this.pathname)
+    && location.hostname == this.hostname
+    && this.hash.replace(/#/,'') ) {
+      var $targetId = $(this.hash), $targetAnchor = $('[name=' + this.hash.slice(1) +']');
+      var $target = $targetId.length ? $targetId : $targetAnchor.length ? $targetAnchor : false;
+       if ($target) {
+         var targetOffset = $target.offset().top;
+         $(this).click(function() {
+           $('html, body').animate({scrollTop: targetOffset}, 1000);
+           var d = document.createElement("div");
+        d.style.height = "101%";
+        d.style.overflow = "hidden";
+        document.body.appendChild(d);
+        window.scrollTo(0,scrollToM);
+        setTimeout(function() {
+        d.parentNode.removeChild(d);
+            }, 10);
+           return false;
+         });
+      }
+    }
+  });
+});
+/*! Smooth Scroll - v1.4.5 - 2012-07-22
+* Copyright (c) 2012 Karl Swedberg; Licensed MIT, GPL */
 </script>
-        </div>
-      </div>
-    </section>
-    <section class="replay-content">
-      <div class="row">
-        <div class="span3">
-          <a href="/sessions/one"><img class="replay" alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
-        </div>
-        <div class="span3">
-          <img alt="Watch Replay of Session Two" src="/images/replay2coming.png" />
-        </div>
-        <div class="span3">
-          <img alt="Watch Replay of Session Three" src="/images/replay3coming.png" />
-        </div>
-        <div class="span3">
-          <img alt="Watch Replay of Session Four" src="/images/replay4coming.png" />
-        </div>
-      </div>
-    </section>
-    <footer>
-      <div class="row">
-        <div class="span8 offset3">
-      Streaming and Development by <a href="http://idlefusion.com">Idle Fusion</a> with Graphics by <a href="http://jeremybags.com">JeremyBags</a>.
-        </div>
-      </div>
-    </footer>
-  </div>
-  <script type="text/javascript">
-    $(function() {
-      $('div#clock').countdown("2012/03/17 20:10:00", function(event) {
-        $this = $(this);
-
-        // Calculate the time left
-        var timeLeft = [
-          event.lasting.days,
-          event.lasting.hours,
-          event.lasting.minutes,
-          event.lasting.seconds
-        ];
-
-        switch(event.type) {
-          case "seconds":
-            $this.find('span#'+event.type).html(timeLeft[3]);
-            break;
-          case "minutes":
-            $this.find('span#'+event.type).html(timeLeft[2]);
-            break;
-          case "hours":
-            $this.find('span#'+event.type).html(timeLeft[1]);
-            break;
-          case "days":
-          case "daysLeft":
-            $this.find('span#'+event.type).html(timeLeft[0]);
-            break;
-          case "finished":
-            $this.fadeTo('slow', .5);
-            break;
-        }
-      });
-    });
-  </script>
-  <script type="text/javascript">
-    var _gauges = _gauges || [];
-    (function() {
-      var t   = document.createElement('script');
-      t.type  = 'text/javascript';
-      t.async = true;
-      t.id    = 'gauges-tracker';
-      t.setAttribute('data-site-id', '4f6271d6f5a1f5393800000f');
-      t.src = '//secure.gaug.es/track.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(t, s);
-    })();
-  </script>
-</body>
+    <!-- End of Smooth Scrolling jquery -->
+  </body>
 </html>
