--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
-  <title>DNOW 2012 LIVE</title>
+  <title>DNOW 2013 LIVE</title>
   <link href="/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"/>
   <link href="/dnow.css" media="screen" rel="stylesheet" type="text/css"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
@@ -18,26 +18,40 @@
         <div class="logo span3">
           <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
         </div>
-        <div class="span3 offset1">
-            <div class="twitter">
-            <a href="https://twitter.com/intent/tweet?button_hashtag=unshaken2012&text=Watch%20DNOW2012%20http%3A%2F%2Fdnow2012.org" class="twitter-hashtag-button" data-size="large" data-related="unshaken2012">Tweet #unshaken2012</a>
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <div class="span9">
+          <div id="clock">
+            <div class="clock-content">
+              <img alt="Live in..." class="live" src="/images/liveindicator.png" />
+              <span id="daysLeft"></span><img alt="Days left" src="/images/days.png" />
+              <span id="hours"></span><img alt="Hours left" src="/images/hours.png" />
+              <span id="minutes"></span><img alt="Minutes left" src="/images/mins.png" />
+              <span id="seconds"></span><img alt="Seconds left" src="/images/seconds.png" />
             </div>
-        </div>
-        <div class="span3">
-            <div class="facebook">
-            <a name="fb_share" type="button" share_url="http://dnow2012.org">DNOW LIVE -- UNSHAKEN 2012</a>
-  <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
-          type="text/javascript">
-  </script>
-            </div>
+          </div>
         </div>
       </div>
     </section>
     <section class="video-content">
       <div class="row">
-        <div class="span12">
-          <iframe src="http://player.vimeo.com/video/38717798" width="930" height="360" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        <div class="video span8">
+          <div id="mediaplayer">
+          </div>
+        </div>
+        <div class="schedule span4">
+          <img alt="Schedule for DNOW 2012" src="/images/schedule.png" />
+        </div>
+      </div>
+    </section>
+    <section class="replay-content">
+      <div class="row">
+        <div class="span4">
+          <img alt="Watch Replay of Session One" src="/images/replay1.png" />
+        </div>
+        <div class="span4">
+          <img alt="Watch Replay of Session Two" src="/images/replay2.png" />
+        </div>
+        <div class="span4">
+          <img alt="Watch Replay of Session Three" src="/images/replay3.png" />
         </div>
       </div>
     </section>
@@ -50,8 +64,30 @@
     </footer>
   </div>
   <script type="text/javascript">
-    $(function() {
-      $('div#clock').countdown("2012/03/17 20:10:00", function(event) {
+    jwplayer('mediaplayer').setup({
+      'id': 'playerID',
+      'autostart': 'true',
+      'width': '640',
+      'height': '480',
+      'provider': 'rtmp',
+      'streamer': 'rtmp://23.21.147.209/live',
+      'file': 'livestream',
+      'controlbar': 'bottom',
+      'modes': [
+          {type: 'flash', src: '/jwplayer/player.swf'},
+          {
+            type: 'html5',
+            config: {
+             'file': 'http://23.21.147.209:1935/live/livestream/playlist.m3u8',
+             'provider': 'video'
+            }
+          }
+      ]
+    });
+  </script>
+  <script type="text/javascript">
+    $(function() {      
+      $('div#clock').countdown("2013/03/15 19:00:00", function(event) {
         $this = $(this);
 
         // Calculate the time left
@@ -77,24 +113,46 @@
             $this.find('span#'+event.type).html(timeLeft[0]);
             break;
           case "finished":
-            $this.fadeTo('slow', .5);
+            $this.fadeTo('slow', 0);
             break;
         }
       });
     });
   </script>
   <script type="text/javascript">
-    var _gauges = _gauges || [];
-    (function() {
-      var t   = document.createElement('script');
-      t.type  = 'text/javascript';
-      t.async = true;
-      t.id    = 'gauges-tracker';
-      t.setAttribute('data-site-id', '4f6271d6f5a1f5393800000f');
-      t.src = '//secure.gaug.es/track.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(t, s);
-    })();
+    jwplayer('mediaplayer').setup({
+      'id': 'playerID',
+      'autostart': 'true',
+      'width': '640',
+      'height': '360',
+      'provider': 'rtmp',
+      'streamer': 'rtmp://23.21.147.209/live',
+      'file': 'livestream',
+      'controlbar': 'bottom',
+      'modes': [
+          {type: 'flash', src: '/jwplayer/player.swf'},
+          {
+            type: 'html5',
+            config: {
+             'file': 'http://23.21.147.209:1935/live/livestream/playlist.m3u8',
+             'provider': 'video'
+            }
+          }
+      ]
+    });
   </script>
+  <script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '51432a4af5a1f51289000019');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
 </body>
 </html>
