--- a/public/index-offline.html
+++ b/public/index-offline.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="logo span3">
           <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
-        </div></div>
+        </div>
       </div>
     </section>
     <section class="header-content">
