--- a/public/one.html
+++ b/public/one.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
-  <title>DNOW 2013 LIVE</title>
+  <title>DNOW 2013 SESSION ONE</title>
   <link href="/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"/>
   <link href="/dnow.css" media="screen" rel="stylesheet" type="text/css"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
@@ -18,22 +18,13 @@
         <div class="logo span3">
           <a href="/"><img alt="DNOW 2012" src="/images/logo.png" /></a>
         </div>
-        <div class="span9">
-          <div id="clock">
-            <div class="clock-content">
-              LIVE IN
-              <span id="hours"></span>HR
-              <span id="minutes"></span>MIN
-              <span id="seconds"></span>SEC
-            </div>
-          </div>
-        </div>
       </div>
     </section>
     <section class="video-content">
       <div class="row">
         <div class="video span8">
           <div id="mediaplayer">
+            <iframe src="http://player.vimeo.com/video/61948502" width="640" height="480" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           </div>
         </div>
         <div class="schedule span4">
@@ -62,80 +53,6 @@
       </div>
     </footer>
   </div>
-  <script type="text/javascript">
-    jwplayer('mediaplayer').setup({
-      'id': 'playerID',
-      'autostart': 'true',
-      'width': '640',
-      'height': '480',
-      'provider': 'rtmp',
-      'streamer': 'rtmp://23.21.147.209/live',
-      'file': 'livestream',
-      'controlbar': 'bottom',
-      'modes': [
-          {type: 'flash', src: '/jwplayer/player.swf'},
-          {
-            type: 'html5',
-            config: {
-             'file': 'http://23.21.147.209:1935/live/livestream/playlist.m3u8',
-             'provider': 'video'
-            }
-          }
-      ]
-    });
-  </script>
-  <script type="text/javascript">
-    $(function() {      
-      $('div#clock').countdown("2013/03/16 11:00:00", function(event) {
-        $this = $(this);
-
-        // Calculate the time left
-        var timeLeft = [
-          event.lasting.days,
-          event.lasting.hours,
-          event.lasting.minutes,
-          event.lasting.seconds
-        ];
-
-        switch(event.type) {
-          case "seconds":
-            $this.find('span#'+event.type).html(timeLeft[3]);
-            break;
-          case "minutes":
-            $this.find('span#'+event.type).html(timeLeft[2]);
-            break;
-          case "hours":
-            $this.find('span#'+event.type).html(timeLeft[1]);
-            break;
-          case "finished":
-            $this.fadeTo('slow', 0);
-            break;
-        }
-      });
-    });
-  </script>
-  <script type="text/javascript">
-    jwplayer('mediaplayer').setup({
-      'id': 'playerID',
-      'autostart': 'true',
-      'width': '640',
-      'height': '360',
-      'provider': 'rtmp',
-      'streamer': 'rtmp://107.20.142.70/live',
-      'file': 'livestream',
-      'controlbar': 'bottom',
-      'modes': [
-          {type: 'flash', src: '/jwplayer/player.swf'},
-          {
-            type: 'html5',
-            config: {
-             'file': 'http://107.20.142.70:1935/live/livestream/playlist.m3u8',
-             'provider': 'video'
-            }
-          }
-      ]
-    });
-  </script>
   <script type="text/javascript">
   var _gauges = _gauges || [];
   (function() {
