--- a/public/one.html
+++ b/public/one.html
@@ -38,7 +38,7 @@
           <a href="/sessions/one"><img alt="Watch Replay of Session One" src="/images/replay1.png" /></a>
         </div>
         <div class="span4">
-          <img alt="Watch Replay of Session Two" src="/images/replay2.png" />
+          <a href="/sessions/two"><img alt="Watch Replay of Session Two" src="/images/replay2.png" /></a>
         </div>
         <div class="span4">
           <img alt="Watch Replay of Session Three" src="/images/replay3.png" />
