--- a/public/one.html
+++ b/public/one.html
@@ -41,7 +41,7 @@
           <a href="/sessions/two"><img alt="Watch Replay of Session Two" src="/images/replay2.png" /></a>
         </div>
         <div class="span4">
-          <img alt="Watch Replay of Session Three" src="/images/replay3.png" />
+          <a href="/sessions/three"><img alt="Watch Replay of Session Three" src="/images/replay3.png" /></a>
         </div>
       </div>
     </section>
