--- a/public/three.html
+++ b/public/three.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
 <head>
-  <title>DNOW 2013</title>
+  <title>DNOW 2013 SESSION THREE</title>
   <link href="/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css"/>
   <link href="/dnow.css" media="screen" rel="stylesheet" type="text/css"/>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="video span8">
           <div id="mediaplayer">
-            <iframe src="http://player.vimeo.com/video/62003692" width="640" height="360" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+            <iframe src="http://player.vimeo.com/video/61983673" width="640" height="480" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
           </div>
         </div>
         <div class="schedule span4">
